@@ -1,6 +1,7 @@
 2016-08-13  Dirk Eddelbuettel  <edd@debian.org>
 
-	* .travis.yml: Switch to using run.sh for Travis CI
+	* .travis.yml: Switch to using run.sh for Travis CI, also switch to
+	using a build matrix across ProtoBuf versions 2 and 3
 
 2016-07-19  Craig Radcliffe  <chradcliffe@gmail.com>
 
